syntax = "proto3";
option go_package = "pkg/user/pb;pb";

message UserRequest {
  int64 id = 1;
}

message UserResponse {
  string name = 1;
}

service UserService {
  rpc UserInfo(UserRequest) returns (UserResponse) {}
}